fixing overflow and color on drop nav for responsive

--- a/src/styles/site.less
+++ b/src/styles/site.less
@@ -140,18 +140,29 @@ ul.nav-tabs li {
 	}
 }
 
-@media (min-width: @screen-sm-min) { 
-	ul.nav {
-		li {
-			
-		}
+@media (max-width: @screen-sm-max) { 
+	#navbar {
+		margin-top: -9px;
+		overflow: hidden;
 	}
-	
+
+	ul.nav {
+		background-image: -webkit-linear-gradient(top,#3c3c3c 0,#222 100%);
+		background-image: -o-linear-gradient(top,#3c3c3c 0,#222 100%);
+		background-image: -webkit-gradient(linear,left top,left bottom,from(#3c3c3c),to(#222));
+		background-image: linear-gradient(to bottom,#3c3c3c 0,#222 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
+		filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+	}
+}
+
+@media (min-width: @screen-sm-min) { 
 	.navbar>.container .navbar-header .navbar-brand,
 	.navbar>.container-fluid .navbar-header .navbar-brand {
 		margin-left: 0;	
 	}
 }
+
 //*--------------------------*/
 //*       ./Navigation       */
 //*--------------------------*/
